src/test/ui/closure_context/issue-26046-fn-once.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
  --> $DIR/issue-26046-fn-once.rs:14:19
   |
14 |       let closure = move || {
   |  ___________________^
15 | |         vec
16 | |     };
   | |_____^
   |
note: closure is `FnOnce` because it moves the variable `vec` out of its environment
  --> $DIR/issue-26046-fn-once.rs:15:9
   |
15 |         vec
   |         ^^^

error: aborting due to previous error(s)

